--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
-node_modules
-.next
-.gitignore
+# Dependencies
+node_modules/
+
+# Next.js
+.next/
+out/
+build/
+
+# pnpm
+pnpm-debug.log*
+.pnpm-store/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# TypeScript
+*.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
