--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next",
+    "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind",
     "build": "next build",
     "start": "next start"
   },
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "24.1.0",
     "@types/react": "19.1.9",
+    "pagefind": "^1.3.0",
     "typescript": "^5.9.2"
   }
 }
